# termgraph

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release.yaml  testing.yaml
assets/: README.md  carbon-config.json
benches/: basic.rs
examples/: colors.rs  custom-formatting.rs  custom-lines.rs  max-width.rs  random_graph.rs  simple.rs  with_cycle.rs
src/: acyclic.rs  config.rs  formatter.rs  graph.rs  grid.rs  levels.rs  lib.rs
src/graph/: feedback_arc_set.rs  tarjan.rs
src/grid/: entry.rs  grid_structure.rs  internalnode.rs  levelcon.rs
tests/: small.rs
