[package]
name = "termgraph"
version = "0.4.0"
edition = "2021"
authors = ["Lol3r <lol3r@lol3r.net>"]
description = "A Crate to displays Graphs in the Terminal"
readme = "README.md"
repository = "https://github.com/Lol3rrr/termgraph"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
criterion = "0.3"

[[bench]]
name = "basic"
harness = false